--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,19 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
     "import json\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "import glob"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "mongo = MongoClient('172.17.0.1', 27017)\n",
@@ -23,9 +28,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "## Valid image URLs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [],
+   "source": [
+    "all_posts = [p for p in posts.find()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "source_url = {'https://www.reddit.com/r/dataisugly', 'https://badvisualisations.tumblr.com/', 'https://viz.wtf/'}"
@@ -33,68 +60,259 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = [p for p in posts.find({})\n",
-    "              if p['source_url'] in source_url and\n",
-    "                 p['preview']['url'] != '' and\n",
-    "                 p['thumbnail']['url'] != '' and\n",
-    "                 p['media_type'] == 'image'\n",
-    "         ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6589"
+       "6587"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(output)"
+    "output = [p for p in all_posts\n",
+    "              if p['source_url'] in source_url and\n",
+    "                 p['preview']['url'] != '' and\n",
+    "                 p['thumbnail']['url'] != '' and\n",
+    "                 p['media_type'] == 'image'\n",
+    "         ]\n",
+    "len(output) # expected to have valid images"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "for o in output:\n",
-    "    del o['_id']"
+    "results = [r for r in db['dlarchiveresults'].find() if 'status' in r and (r['status'] == 'exists' or r['status'] == 'downloaded')]\n",
+    "len(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "103"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "json.dump(output[0:1000], open('./output.json', 'w'))"
+    "results = [r for r in db['dlarchiveresults'].find() if 'status' in r and r['status'] == 'skip_content_type']\n",
+    "len(results)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 10,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "537"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = [r for r in db['dlarchiveresults'].find() if 'archive_status' in r and r['archive_status'] == 'archive_not_found']\n",
+    "len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Counter({'exists': 131,\n",
+       "         'downloaded': 1,\n",
+       "         'skip_content_type': 103,\n",
+       "         'invalid_content_type': 3})"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter([r['status'] for r in db['dlarchiveresults'].find() if 'status' in r])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2min 12s, sys: 1min 2s, total: 3min 15s\n",
+      "Wall time: 3min 15s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "posts_with_image = [p for p in posts.find() if glob.glob(f\"images/*/*/*/{p['id']}*\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7852"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(posts_with_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "918"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_posts) - len(posts_with_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66i283\n",
+      "['images/preview/reddit/dataisugly/66i283.jpg', 'images/thumbnail/reddit/dataisugly/66i283.jpg', 'images/external_link/reddit/dataisugly/66i283.jpg']\n"
+     ]
+    }
+   ],
+   "source": [
+    "for p in [posts.find_one()]:\n",
+    "    print(p['id'])\n",
+    "    print(glob.glob(f\"images/*/*/*/{p['id']}*\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('66i283', 1),\n",
+       " ('e2cvur', 1),\n",
+       " ('6h6cr9', 1),\n",
+       " ('4xjubo', 1),\n",
+       " ('boo6ld', 1),\n",
+       " ('6wqste', 1),\n",
+       " ('8msftx', 1),\n",
+       " ('5a0wp5', 1),\n",
+       " ('a3gj0h', 1),\n",
+       " ('bzk2hf', 1)]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Counter([p['id'] for p in all_posts]).most_common()[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "## Tags"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "c = Counter([t for p in posts.find() for t in p['tags']])"
@@ -103,7 +321,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -170,16 +390,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "source": [
+    "## Author"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "c = Counter([p['author'] for p in posts.find() if 'author' in p])"
@@ -188,7 +412,9 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
@@ -257,7 +483,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
