--- a/reddit_digest.ipynb
+++ b/reddit_digest.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from pymongo import MongoClient\n",
@@ -16,19 +18,23 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "mongo = MongoClient('172.17.0.1', 27017)\n",
     "db = mongo['bad-vis']\n",
-    "raw = db['reddit-raw']\n",
+    "raw = db['reddit-merge']\n",
     "posts = db['posts']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "from collections.abc import MutableMapping, Sequence\n",
@@ -56,8 +62,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "class Submission ():\n",
@@ -77,24 +85,24 @@
     "        'external_link',\n",
     "        'source',\n",
     "        'source_url',\n",
-    "        'related_post',\n",
+    "        'duplicated_post',\n",
     "        'tags',\n",
     "        'media_type',\n",
     "        'labels'\n",
     "    ]\n",
-    "    \n",
+    "\n",
     "    _video_type = {\n",
     "        'gfycat.com',\n",
     "        'streamable.com',\n",
     "        'vimeo.com',\n",
     "        'youtube.com'\n",
     "    }\n",
-    "    \n",
-    "    def __init__ (self, s, related_post=None):\n",
+    "\n",
+    "    def __init__ (self, s, duplicated_post=None):\n",
     "        self._s = s\n",
-    "        self._related_post = related_post\n",
+    "        self._duplicated_post = duplicated_post\n",
     "        self._subreddit = s['subreddit'] if type(s['subreddit']) == str else s['subreddit']['display_name']\n",
-    "        \n",
+    "\n",
     "        self.id = s['id']\n",
     "        self.post_id = f'reddit/{self._subreddit}/{self.id}'\n",
     "        self.title = s['title']\n",
@@ -103,16 +111,16 @@
     "        self.num_comments = s['num_comments']\n",
     "        self.source = 'Reddit'\n",
     "        self.source_url = f'https://www.reddit.com/{s[\"subreddit_name_prefixed\"]}'\n",
-    "        \n",
+    "\n",
     "        self._crosspost = Submission(s['crosspost_parent_list'][0], self.post_id) if 'crosspost_parent_list' in s and len(s['crosspost_parent_list']) > 0 else None\n",
-    "        \n",
+    "\n",
     "    def digest (self):\n",
     "        return {a:getattr(self, a) for a in Submission._attrs}\n",
     "\n",
     "    @property\n",
     "    def datetime (self):\n",
     "        return datetime.fromtimestamp(self._s['created_utc']).isoformat()\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def url (self):\n",
     "        if 'permalink' in self._s:\n",
@@ -130,29 +138,29 @@
     "            return self._s['author'] if type(self._s['author']) == str else self._s['author']['name']\n",
     "        else:\n",
     "            return ''\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def external_link (self):\n",
     "        if 'url' in self._s and self._s['url'] != self.url:\n",
     "            return self._s['url']\n",
     "        else:\n",
     "            return ''\n",
-    "    \n",
+    "\n",
     "    @property\n",
-    "    def related_post (self):\n",
-    "        if self._related_post:\n",
-    "            return self._related_post\n",
+    "    def duplicated_post (self):\n",
+    "        if self._duplicated_post:\n",
+    "            return self._duplicated_post\n",
     "        if self._crosspost:\n",
     "            return self._crosspost.post_id\n",
     "        if 'viz.wtf' in self.external_link:\n",
     "            wtfviz_id = [t for t in self.external_link.split('/') if t.isdigit()]\n",
     "            return f'tumblr/wtf-viz/{wtfviz_id}'\n",
     "        return ''\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def tags (self):\n",
     "        return [self._s['link_flair_text']] if 'link_flair_text' in self._s and self._s['link_flair_text'] else []\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def labels (self):\n",
     "        return {\n",
@@ -169,7 +177,7 @@
     "        if self.preview['url']:\n",
     "            return 'image'\n",
     "        return 'text'\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def preview (self):\n",
     "        try:\n",
@@ -201,7 +209,7 @@
     "                'width': 0,\n",
     "                'height': 0\n",
     "            }\n",
-    "        \n",
+    "\n",
     "    @property\n",
     "    def thumbnail (self):\n",
     "        try:\n",
@@ -240,7 +248,7 @@
     "                'width': 0,\n",
     "                'height': 0\n",
     "            }\n",
-    "    \n",
+    "\n",
     "    @property\n",
     "    def removed (self):\n",
     "        return '' if not self._s['removed_by_category'] else self._s['removed_by_category']"
@@ -248,8 +256,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": [
     "def digest_all_submissions ():\n",
@@ -263,13 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d310ad2ea11f409d990bf6eaefe5be0f",
+       "model_id": "198b23b2013b4a889e3da17a491d7b8a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -294,8 +306,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('5e36b8a188ff1ac1a2751292'),\n",
+       " 'id': '4f927p',\n",
+       " 'post_id': 'reddit/dataisugly/4f927p',\n",
+       " 'datetime': '2016-04-17T23:25:13',\n",
+       " 'url': 'https://reddit.com/r/dataisugly/comments/4f927p/the_truth_about_abuse/',\n",
+       " 'title': 'The Truth about Abuse',\n",
+       " 'content': '[deleted]',\n",
+       " 'author': '',\n",
+       " 'thumbnail': {'url': '', 'width': 0, 'height': 0},\n",
+       " 'preview': {'url': '', 'width': 0, 'height': 0},\n",
+       " 'removed': '',\n",
+       " 'ups': 0,\n",
+       " 'num_comments': 0,\n",
+       " 'external_link': 'http://imgur.com/(null)',\n",
+       " 'source': 'Reddit',\n",
+       " 'source_url': 'https://www.reddit.com/r/dataisugly',\n",
+       " 'duplicated_post': '',\n",
+       " 'tags': [],\n",
+       " 'media_type': 'text',\n",
+       " 'labels': {'auto': []}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posts.find_one({'id': '4f927p'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "Collapsed": "false"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.DeleteResult at 0x7f15072a7ec8>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "posts.delete_one({'id': '4f927p'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "Collapsed": "false"
+   },
    "outputs": [],
    "source": []
   }
