--- a/reddit_pushshift_crawler.ipynb
+++ b/reddit_pushshift_crawler.ipynb
@@ -34,7 +34,8 @@
     "mongo = MongoClient('172.17.0.1', 27017)\n",
     "db = mongo['bad-vis']\n",
     "raw = db['pushshift-raw']\n",
-    "reddit_raw = db['reddit-raw']"
+    "reddit_raw = db['reddit-raw']\n",
+    "reddit_merge = db['reddit-merge']"
    ]
   },
   {
@@ -107,7 +108,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fe83fc46a72d4705bd20f8cf971c6722",
+       "model_id": "0771e3f8007b4f669012d788918236df",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,23 +194,23 @@
     "\n",
     "def retrieve_original_submissions ():\n",
     "    for s in tqdm(raw.find()):\n",
-    "        if not reddit_raw.find_one({'id': s['id']}, {'_id': 1}):\n",
-    "            original = reddit.submission(id=s['id'])\n",
+    "        if not reddit_raw.find_one({'id': s['id']}, {'_id': 1}) and not reddit_merge.find_one({'id': s['id']}, {'_id': 1}):\n",
+    "            original = reddit.submission(s['id'])\n",
     "            name = original.name # trigger data fetching\n",
-    "            reddit_raw.insert_one(json.loads(json.dumps(original, cls=PRAWJSONEncoder)))\n",
+    "            reddit_merge.insert_one(json.loads(json.dumps(original, cls=PRAWJSONEncoder)))\n",
     "\n",
-    "    return "
+    "    return"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6e383b5dd9d457080a173330160c76b",
+       "model_id": "120519b6f48740bc96fdc8d090c09b4b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,6 +231,38 @@
    ],
    "source": [
     "retrieve_original_submissions()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1c753ddeede34b4dac201ef337976c6f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=1.0, bar_style='info', max=1.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for s in tqdm(reddit_raw.find()):\n",
+    "    reddit_merge.insert_one(s)"
    ]
   },
   {
